--- a/gan_colorful_imgs.ipynb
+++ b/gan_colorful_imgs.ipynb
@@ -7,17 +7,106 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
     "import torchvision\n",
     "import torchvision.transforms as transforms\n",
-    "from torch.utils.data import DataLoader\n",
+    "from torch.utils.data import DataLoader, Dataset\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
+    "import cv2\n",
     "import os\n",
+    "from PIL import Image\n",
     "\n",
-    "# --- Generator ---\n",
+    "\n",
+    "latent_dim = 128\n",
+    "img_size = 32\n",
+    "channels = 3\n",
+    "lr = 0.0002\n",
+    "b1, b2 = 0.5, 0.999\n",
+    "batch_size = 64\n",
+    "num_epochs = 200\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
+    "def list_images(basePath, contains=None):\n",
+    "   \n",
+    "    return list_files(basePath, validExts=(\".jpg\", \".jpeg\", \".png\", \".bmp\"), contains=contains)\n",
+    "\n",
+    "def list_files(basePath, validExts=(\".jpg\", \".jpeg\", \".png\", \".bmp\"), contains=None):\n",
+    "\n",
+    "    for (rootDir, dirNames, filenames) in os.walk(basePath):\n",
+    "       \n",
+    "        for filename in filenames:\n",
+    "\n",
+    "            if contains is not None and filename.find(contains) == -1:\n",
+    "                continue\n",
+    "\n",
+    "\n",
+    "            ext = filename[filename.rfind(\".\"):].lower()\n",
+    "\n",
+    "\n",
+    "            if ext.endswith(validExts):\n",
+    "\n",
+    "                imagePath = os.path.join(rootDir, filename).replace(\" \", \"\\\\ \")\n",
+    "                yield imagePath\n",
+    "\n",
+    "def load_images(directory='', size=(64,64)):\n",
+    "    images = []\n",
+    "    labels = []  \n",
+    "    label = 0\n",
+    "    \n",
+    "    imagePaths = list(list_images(directory))\n",
+    "    \n",
+    "    for path in imagePaths:\n",
+    "        \n",
+    "        if not('OSX' in path):\n",
+    "        \n",
+    "            path = path.replace('\\\\','/')\n",
+    "\n",
+    "            image = cv2.imread(path) \n",
+    "            if image is not None:  \n",
+    "                image = cv2.resize(image, size)\n",
+    "                images.append(cv2.cvtColor(image, cv2.COLOR_BGR2RGB))\n",
+    "    \n",
+    "    return images\n",
+    "\n",
+    "\n",
+    "class CustomImageDataset(Dataset):\n",
+    "    def __init__(self, directory, img_size=32, transform=None):\n",
+    "        self.images = load_images(directory, size=(img_size, img_size))\n",
+    "        self.transform = transform\n",
+    "        \n",
+    "    def __len__(self):\n",
+    "        return len(self.images)\n",
+    "    \n",
+    "    def __getitem__(self, idx):\n",
+    "        image = self.images[idx]\n",
+    "        \n",
+    "\n",
+    "        image = Image.fromarray(image.astype('uint8'))\n",
+    "        \n",
+    "        if self.transform:\n",
+    "            image = self.transform(image)\n",
+    "            \n",
+    "        return image, 0 \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e773a73",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "class Generator(nn.Module):\n",
     "    def __init__(self, latent_dim, channels):\n",
     "        super(Generator, self).__init__()\n",
@@ -39,10 +128,17 @@
     "        )\n",
     "\n",
     "    def forward(self, z):\n",
-    "        return self.model(z.view(z.size(0), z.size(1), 1, 1))\n",
+    "        return self.model(z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9119abc0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
-    "\n",
-    "# --- Discriminator ---\n",
     "class Discriminator(nn.Module):\n",
     "    def __init__(self, channels):\n",
     "        super(Discriminator, self).__init__()\n",
@@ -63,29 +159,35 @@
     "        )\n",
     "\n",
     "    def forward(self, img):\n",
-    "        return self.model(img).view(-1, 1)\n",
-    "\n",
-    "\n",
-    "# --- Hyperparameters ---\n",
-    "latent_dim = 100\n",
-    "img_size = 32\n",
-    "channels = 3\n",
-    "img_shape = (channels, img_size, img_size)\n",
-    "lr = 0.0002\n",
-    "b1, b2 = 0.5, 0.999\n",
-    "batch_size = 64\n",
-    "num_epochs = 200\n",
-    "\n",
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "\n",
-    "# --- Models ---\n",
+    "        return self.model(img).view(-1, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6406fde",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# --- Loss & Optimizers ---\n",
+    "adversarial_loss = nn.BCELoss()\n",
     "generator = Generator(latent_dim, channels).to(device)\n",
     "discriminator = Discriminator(channels).to(device)\n",
-    "adversarial_loss = nn.BCELoss()\n",
     "optimizer_G = optim.Adam(generator.parameters(), lr=lr, betas=(b1, b2))\n",
     "optimizer_D = optim.Adam(discriminator.parameters(), lr=lr, betas=(b1, b2))\n",
     "\n",
-    "# --- Dataset (CIFAR10 or replace path with your anime images folder) ---\n",
+    "data_path = \"/kaggle/input/anime-faces/data\"  \n",
+    "\n",
+    "\n",
+    "print(\"Available datasets in /kaggle/input/:\")\n",
+    "for item in os.listdir(\"/kaggle/input/\"):\n",
+    "    print(f\"- {item}\")\n",
+    "\n",
+    "    item_path = f\"/kaggle/input/{item}\"\n",
+    "    if os.path.isdir(item_path):\n",
+    "        print(f\"  Contents: {os.listdir(item_path)}\")\n",
+    "print()\n",
+    "\n",
     "transform = transforms.Compose([\n",
     "    transforms.Resize(img_size),\n",
     "    transforms.CenterCrop(img_size),\n",
@@ -93,14 +195,22 @@
     "    transforms.Normalize([0.5]*3, [0.5]*3)\n",
     "])\n",
     "\n",
-    "# Example: CIFAR-10\n",
-    "dataset = torchvision.datasets.CIFAR10(root=\"./data\", train=True, download=True, transform=transform)\n",
-    "# Or use ImageFolder for custom dataset\n",
-    "# dataset = torchvision.datasets.ImageFolder(root=\"./anime_faces\", transform=transform)\n",
     "\n",
-    "dataloader = DataLoader(dataset, batch_size=batch_size, shuffle=True)\n",
+    "dataset = CustomImageDataset(data_path, img_size=img_size, transform=transform)\n",
+    "dataloader = DataLoader(dataset, batch_size=batch_size, shuffle=True, num_workers=2)\n",
     "\n",
-    "# --- Training Loop ---\n",
+    "print(f\"Dataset loaded successfully! Total images: {len(dataset)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f44357f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
     "for epoch in range(num_epochs):\n",
     "    for i, (real_imgs, _) in enumerate(dataloader):\n",
     "        real_imgs = real_imgs.to(device)\n",
@@ -111,7 +221,7 @@
     "        optimizer_D.zero_grad()\n",
     "        real_loss = adversarial_loss(discriminator(real_imgs), real_labels)\n",
     "\n",
-    "        z = torch.randn(real_imgs.size(0), latent_dim).to(device)\n",
+    "        z = torch.randn(real_imgs.size(0), latent_dim, 1, 1).to(device)\n",
     "        fake_imgs = generator(z)\n",
     "        fake_loss = adversarial_loss(discriminator(fake_imgs.detach()), fake_labels)\n",
     "        d_loss = (real_loss + fake_loss) / 2\n",
@@ -125,13 +235,13 @@
     "        optimizer_G.step()\n",
     "\n",
     "        if (i + 1) % 200 == 0:\n",
-    "            print(f\"[Epoch {epoch+1}/{num_epochs}] [Batch {i+1}/{len(dataloader)}] [D loss: {d_loss.item():.4f}] [G loss: {g_loss.item():.4f}]\")\n",
+    "            print(f\"[Epoch {epoch+1}/{num_epochs}] [Batch {i+1}/{len(dataloader)}] \"\n",
+    "                  f\"[D loss: {d_loss.item():.4f}] [G loss: {g_loss.item():.4f}]\")\n",
     "\n",
-    "    # Generate images\n",
     "    if (epoch + 1) % 10 == 0:\n",
     "        generator.eval()\n",
     "        with torch.no_grad():\n",
-    "            z = torch.randn(25, latent_dim).to(device)\n",
+    "            z = torch.randn(25, latent_dim, 1, 1).to(device)\n",
     "            samples = generator(z).cpu()\n",
     "            samples = 0.5 * samples + 0.5\n",
     "            grid = torchvision.utils.make_grid(samples, nrow=5)\n",
@@ -140,7 +250,12 @@
     "            plt.title(f\"Epoch {epoch+1}\")\n",
     "            plt.axis(\"off\")\n",
     "            plt.show()\n",
-    "        generator.train()\n"
+    "\n",
+    "            # Save output\n",
+    "            torchvision.utils.save_image(samples, f\"epoch_{epoch+1}.png\", nrow=5, normalize=True)\n",
+    "        generator.train()\n",
+    "\n",
+    "print(\"Training completed!\")"
    ]
   }
  ],
