--- a/dc-gan.ipynb
+++ b/dc-gan.ipynb
@@ -1041,7 +1041,7 @@
     "            \n",
     "        return image, 0  \n",
     "\n",
-    "# --- Generator ---\n",
+    "#generator\n",
     "class Generator(nn.Module):\n",
     "    def __init__(self, latent_dim, channels):\n",
     "        super(Generator, self).__init__()\n",
@@ -1065,7 +1065,7 @@
     "    def forward(self, z):\n",
     "        return self.model(z)\n",
     "\n",
-    "# --- Discriminator ---\n",
+    "# Discriminator\n",
     "class Discriminator(nn.Module):\n",
     "    def __init__(self, channels):\n",
     "        super(Discriminator, self).__init__()\n",
@@ -1088,7 +1088,7 @@
     "    def forward(self, img):\n",
     "        return self.model(img).view(-1, 1)\n",
     "\n",
-    "# --- Loss & Optimizers ---\n",
+    "# Loss functions and Optimizers....\n",
     "adversarial_loss = nn.BCELoss()\n",
     "generator = Generator(latent_dim, channels).to(device)\n",
     "discriminator = Discriminator(channels).to(device)\n",
@@ -1121,7 +1121,7 @@
     "\n",
     "print(f\"Dataset loaded successfully! Total images: {len(dataset)}\")\n",
     "\n",
-    "# --- Training Loop ---\n",
+    "# training starts\n",
     "for epoch in range(num_epochs):\n",
     "    for i, (real_imgs, _) in enumerate(dataloader):\n",
     "        real_imgs = real_imgs.to(device)\n",
