--- a/dc-gan-v2.ipynb
+++ b/dc-gan-v2.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "aa58bc8c",
+   "metadata": {},
+   "source": [
+    "latest and working code\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "2464aa86",
@@ -233,15 +241,15 @@
     "        real_imgs = real_imgs.to(device)\n",
     "        batch_size_current = real_imgs.size(0)\n",
     "        \n",
-    "        # Label smoothing - use soft labels instead of hard 0/1\n",
+    "        # using Label smoothing over here-  soft labels instead of hard i.e. 0/1\n",
     "        real_labels = torch.ones(batch_size_current, 1).to(device) * 0.9  # 0.9 instead of 1.0\n",
     "        fake_labels = torch.zeros(batch_size_current, 1).to(device) + 0.1  # 0.1 instead of 0.0\n",
     "\n",
-    "        # Generate fake images\n",
+    "        # Generating fake images\n",
     "        z = torch.randn(batch_size_current, latent_dim, 1, 1).to(device)\n",
     "        fake_imgs = generator(z)\n",
     "\n",
-    "        # --- Train Discriminator (less frequently) ---\n",
+    "        #Train Discriminator (less frequently , to avoid disciminator from becoming too strong) \n",
     "        if i % d_train_freq == 0:\n",
     "            optimizer_D.zero_grad()\n",
     "            \n",
@@ -256,15 +264,14 @@
     "            d_loss = (real_loss + fake_loss) / 2\n",
     "            \n",
     "            \n",
-    "            if d_loss.item() > 0.1:  # Prevent discriminator from becoming too strong\n",
+    "            if d_loss.item() > 0.1:  # Preventing discriminator from becoming too strong by using less frequent training\n",
     "                d_loss.backward()\n",
     "                optimizer_D.step()\n",
     "\n",
     "        \n",
     "        if i % g_train_freq == 0:\n",
     "            optimizer_G.zero_grad()\n",
-    "            \n",
-    "            # Generator wants discriminator to classify fake images as real\n",
+    "\n",
     "            fake_pred = discriminator(fake_imgs)\n",
     "            g_loss = adversarial_loss(fake_pred, real_labels)\n",
     "            \n",
@@ -280,7 +287,7 @@
     "        scheduler_G.step()\n",
     "        scheduler_D.step()\n",
     "\n",
-    "    # Save & Show Generated Images\n",
+    "\n",
     "    if (epoch + 1) % 10 == 0:\n",
     "        generator.eval()\n",
     "        with torch.no_grad():\n",
